@@ -16,9 +16,11 @@ CHANGE: Core | Torrent opener will now report errors opening torrents better [Pa
 BUGFIX: Core | Throw an error message if existing data file length is too large [Nolar]
 BUGFIX: Core | Fix new bug with tracker announce every 10s when no peers were connected [Nolar]
 BUGFIX: Core | Fix for renaming files across volumes [Parg]
+BUGFIX: Core | Torrent auto-import now works with console UI [Nolar]
 BUGFIX: Plug | Netgear WGT624 was crashing when processing UPnP requests [Parg]
 BUGFIX: Plug | Webui 'view' more wasn't working [Parg]
 BUGFIX: Plug | Webui - excessively long status text messing up table [Parg]
+
 
 
 2004.07.08 | Azureus 2.1.0.4
